Closed
Bug 28445
Opened 26 years ago
Closed 26 years ago
Error displayed after selecting the renamed subfolders
Categories
(SeaMonkey :: MailNews: Message Display, defect, P3)
SeaMonkey
MailNews: Message Display
Tracking
(Not tracked)
VERIFIED
FIXED
M14
People
(Reporter: huang, Assigned: jefft)
Details
(Whiteboard: [PDT+] verified)
Attachments
(4 files)
Mac only: 02-18-08-M14 commercial build
Error displayed after selecting the created subfolders
Setup info:
Created new profile, new IMAP Mail account.
Steps:
1) Login to mail
2) Created New folders
3) Select this created folders
4) Actual Results: Error displayed: " The current command did not succeed. The
mail server responded: Mailbox does not exist
Expected Results: Shouildn't display error message after selecting that created
subfolders.
Comment 3•26 years ago
|
||
Oh, wait, it's Mac-only and David's at home. cc'ing hangas and ducarroz.
Comment 4•26 years ago
|
||
please attach a protocol log.
Updated•26 years ago
|
Assignee: bienvenu → davidmc
Comment 5•26 years ago
|
||
reasigning to david mc.
| Reporter | ||
Comment 6•26 years ago
|
||
OK. I am narrowing down this problem....this error will occure after I rename a
subfolders....and it will continue displaying that error...even when I
am creating new subfolders. Updating the summary to "rename folders".
Summary: Error displayed after selecting the created subfolders → Error displayed after selecting the renamed subfolders
| Reporter | ||
Comment 7•26 years ago
|
||
After narrow down this is "rename folders" problem...it also occurred on all the
platforms.... Cc:bienvenu
| Reporter | ||
Comment 8•26 years ago
|
||
| Reporter | ||
Comment 9•26 years ago
|
||
Change OS/Platforms to All! Remove "pp".
Comment 10•26 years ago
|
||
I guess I'll try to reproduce this.
Comment 12•26 years ago
|
||
hat it he name of the folder that failed. ASCII? Japanese?
Whiteboard: [NEED INFO]
| Reporter | ||
Comment 13•26 years ago
|
||
I just rename folders(ex: from folder1 to folder2) and I got above error
message....
| Reporter | ||
Comment 14•26 years ago
|
||
I do check that there is no "folder2" existing before I rename to that folder --
this is just an example......
Comment 15•26 years ago
|
||
Two separate cases show the same assertion inside
nsImapUrl::AllocateServerPath() because the hierarchy separator has apparently
not been set, so the delimitor is still the default '^' which hits the first
assertion in that method.
After a folder is renamed, the assertion fires every time the folder is selected,
but the next session returns to normal. The assertion also fires right after a
new folder is created, apparently for exactly the same reasons.
David B says Jeff T must not be setting the hierarchy separator; should he take
this bug from me, or should I puzzle out where the code logic lives? cc jefft
Comment 16•26 years ago
|
||
forgot to say my build is older than Paul's; better update that now.
Status: NEW → ASSIGNED
Whiteboard: [NEED INFO] → [NEED INFO] ETA 2/23
Comment 18•26 years ago
|
||
Putting on PDT+ radar for beta1.
Whiteboard: [NEED INFO] ETA 2/23 → [PDT+]ETA 02/23
Whiteboard: [PDT+]ETA 02/23 → [PDT+]ETA 02/23; fix un hand, reviewed waiting for approval
| Assignee | ||
Comment 19•26 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 20•26 years ago
|
||
Used 02-24-09-M14 commercial build:
I am reopening this bug...
The scenario is:
If I select the renamed folder, the error won't display anymore.
But, if I select the childfolders of that renamed subfolder, error still
displayed: "The current command did not succeed. The mail server responded:
Mailbox does not exist".
It does not occurre every renamed subfolders...but some childfolders of some
renamed subfolders will display that error, I am trying to narrow down this
problem, but still couldn't figure it out!! Reopening this bug & clearing status
whiteboard anyway...
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Whiteboard: [PDT+]ETA 02/23; fix un hand, reviewed waiting for approval → [PDT+]
| Assignee | ||
Comment 21•26 years ago
|
||
Pretty tricky bug ....
Status: REOPENED → ASSIGNED
Whiteboard: [PDT+] → [PDT+] ETA 2/28
| Reporter | ||
Comment 22•26 years ago
|
||
Yes. it is...
I have tried to reproduce it yesterday....
Let me attached 2 IMAP log for successful rename & non-successful rename as
following... hope it will help! It's really tricky bug....
| Reporter | ||
Comment 23•26 years ago
|
||
| Reporter | ||
Comment 24•26 years ago
|
||
| Reporter | ||
Updated•26 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 26 years ago → 26 years ago
Resolution: --- → WORKSFORME
Whiteboard: [PDT+] ETA 2/28 → [PDT+]
| Reporter | ||
Comment 25•26 years ago
|
||
Jeff, ignore above "rename unsuccessfully imap log" since this log may be
dealing with other problem....this may be another bug!
(I should attached log yesterday but I didn't)
After I removed "User50" & "mozregistry.dat" files..I am not able to reproduce
this bug again....I am going to mark as verified for this bug.
If we see problem again, we can reopen it later....
| Assignee | ||
Comment 26•26 years ago
|
||
Are you sure? This shouldn't have anything to do with mozregistry.data.
Comment 27•26 years ago
|
||
karen also deleted the whole user profile directory, which means all the msf
files and panacea.dat.
| Assignee | ||
Comment 28•26 years ago
|
||
I am reopening this. The problem is there.
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
| Reporter | ||
Comment 29•26 years ago
|
||
Thanks god! I catch that on Linux!!
I had problem for attaching the log file for Linux...
Just copy log on this bug now....
But after I deleted the .mozilla file, this problem won't occure...
This is really tricky bug!!
********************************************************************************
4100[89b7180]: nsmail-5:S-INBOX:SendData: 19 rename "y2k/y2k_2" "y2k/y2k_3"
4100[89b7180]: nsmail-5:S-INBOX:CreateNewLineFromSocket: 19 OK Completed
4100[89b7180]: nsmail-5:S-INBOX:SendData: 20 subscribe "y2k/y2k_3"
4100[89b7180]: nsmail-5:S-INBOX:CreateNewLineFromSocket: 20 OK Completed
4100[89b7180]: nsmail-5:S-INBOX:SendData: 21 unsubscribe "y2k/y2k_2"
4100[89b7180]: nsmail-5:S-INBOX:CreateNewLineFromSocket: 21 OK Completed
4100[89b7180]: nsmail-5:S-INBOX:SendData: 22 subscribe "y2k/y2k_3/y2k_1_1"
4100[89b7180]: nsmail-5:S-INBOX:CreateNewLineFromSocket: 22 OK Completed
4100[89b7180]: nsmail-5:S-INBOX:SendData: 23 unsubscribe "y2k/y2k_2/y2k_1_1"
4100[89b7180]: nsmail-5:S-INBOX:CreateNewLineFromSocket: 23 OK Completed
5125[8c7aa58]: nsmail-5:A:SendData: 10 select "y2k"
5125[8c7aa58]: nsmail-5:A:CreateNewLineFromSocket: * FLAGS (\Answered \Flagged
\Draft \Deleted \Seen)
5125[8c7aa58]: nsmail-5:A:CreateNewLineFromSocket: * OK [PERMANENTFLAGS
(\Answered \Flagged \Draft \Deleted \Seen \*)]
5125[8c7aa58]: nsmail-5:A:CreateNewLineFromSocket: * 0 EXISTS
5125[8c7aa58]: nsmail-5:A:CreateNewLineFromSocket: * 0 RECENT
5125[8c7aa58]: nsmail-5:A:CreateNewLineFromSocket: * OK [UIDVALIDITY 949088295]
5125[8c7aa58]: nsmail-5:A:CreateNewLineFromSocket: 10 OK [READ-WRITE] Completed
5125[8c7aa58]: nsmail-5:S-y2k:SendData: 11 getacl "y2k"
5125[8c7aa58]: nsmail-5:S-y2k:CreateNewLineFromSocket: * ACL y2k qatest30
lrswipcda
5125[8c7aa58]: nsmail-5:S-y2k:CreateNewLineFromSocket: 11 OK Completed
6150[8be61b0]: nsmail-5:A:SendData: 5 select "y2k/y2k_3"
6150[8be61b0]: nsmail-5:A:CreateNewLineFromSocket: * FLAGS (\Answered \Flagged
\Draft \Deleted \Seen)
6150[8be61b0]: nsmail-5:A:CreateNewLineFromSocket: * OK [PERMANENTFLAGS
(\Answered \Flagged \Draft \Deleted \Seen \*)]
6150[8be61b0]: nsmail-5:A:CreateNewLineFromSocket: * 0 EXISTS
6150[8be61b0]: nsmail-5:A:CreateNewLineFromSocket: * 0 RECENT
6150[8be61b0]: nsmail-5:A:CreateNewLineFromSocket: * OK [UIDVALIDITY 951504873]
6150[8be61b0]: nsmail-5:A:CreateNewLineFromSocket: 5 OK [READ-WRITE] Completed
6150[8be61b0]: nsmail-5:S-y2k/y2k_3:SendData: 6 getacl "y2k/y2k_3"
6150[8be61b0]: nsmail-5:S-y2k/y2k_3:CreateNewLineFromSocket: * ACL y2k/y2k_3
qatest30 lrswipcda
6150[8be61b0]: nsmail-5:S-y2k/y2k_3:CreateNewLineFromSocket: 6 OK Completed
5125[8c7aa58]: nsmail-5:S-y2k:SendData: 12 select "y2k/y2k_2/y2k_1_1"
5125[8c7aa58]: nsmail-5:S-y2k/y2k_2/y2k_1_1:CreateNewLineFromSocket: 12 NO
Mailbox does not exist
5125[8c7aa58]: nsmail-5:A:SendData: 13 getacl "y2k/y2k_2/y2k_1_1"
5125[8c7aa58]: nsmail-5:A:CreateNewLineFromSocket: 13 NO Mailbox does not exist
********************************************************************************
| Reporter | ||
Comment 30•26 years ago
|
||
I mean delete the whole ".mozilla" directory which includs profile & registry
file.
| Reporter | ||
Comment 31•26 years ago
|
||
| Assignee | ||
Comment 32•26 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago → 26 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 33•26 years ago
|
||
Verified on WinNT & Linux 02-29-08/09-M15 commercial build
It is working fine for both Linux & WinNT platforms now.
Need to verify on Mac later.....
| Reporter | ||
Comment 34•26 years ago
|
||
Verified on 03-01-M15 Mac commercial build.
It works great!! Marking as verified!!
| Reporter | ||
Comment 35•26 years ago
|
||
Oops, forgot to mark as verified -- marking as verified now....!!
Status: RESOLVED → VERIFIED
Whiteboard: [PDT+] Fix in hand reviewing... → [PDT+] verified
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•