fixed bug 28445, 26547, 26657, 25988 - failed to set server directory separator correctly; r=bienvenu, a=phil